# localtv

./: .gitignore  CMakeLists.txt  Makefile  setup.pl  videos.txt
carbon-src/: Makefile  main  main.carbon
carbon-src/std/: print.cpp  print.h
migrations/: 0001-create-channels-table.sql  0001-migration-file.sql  0002-add-basic-channels.sql  drop.sql  setup.sql  up.sql
src/: app.cpp  app.h  channel.cpp  channel.h  db.cpp  db.h  db_helper.cpp  db_helper.h  main.cpp  migrate.cpp  mpv_helpers.cpp  mpv_helpers.h  schedule.cpp  schedule.h  sdl_helpers.cpp  sdl_helpers.h  setup.cpp  util.cpp  util.h  video.cpp  video.h
